apps/gitlab/base/resources/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gitlab-ssh-gateway
  namespace: gitlab
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - gitlab.infra.home.arpa
      port:
        name: gitlab-ssh
        number: 2222
        protocol: TCP
